discussion/kv_engine/166695/166695_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Nexus] Flush the logger before aborting the process

To ensure that we see the cause of the abort.

Change-Id: I8eb9ed4d49ca0aa720a64e5368887adbb829aa3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-12-01 08:55:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-01 09:08:54.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35726/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35726/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42109/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/error_handler.cc(41): error C2039: "logger": is not a member of "cb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42109/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14261/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.cc:41:9: error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"? [clang-diagnostic-error]
        cb::logger::flush();
        ^~~~~~~~~~
        spdlog::logger
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/spdlog.exploded/include/spdlog/logger.h:42:18: note: "spdlog::logger" declared here
class SPDLOG_API logger
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.cc:41:21: error: call to non-static member function without an object argument [clang-diagnostic-error]
        cb::logger::flush();
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14261/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14261/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3968/ : FAILURE

Compile error at [2021-12-01T09:06:53.456Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/error_handler.cc:41:13:
error: ?cb::logger? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3968/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24272/ : FAILURE

Compile error at [2021-12-01T08:59:47.826Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24272/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3893/ : FAILURE

Compile error at [2021-12-01T08:59:29.719Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3893/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15886/ : FAILURE

Compile error at [2021-12-01T09:01:16.696Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/error_handler.cc:41:13:
error: ?cb::logger? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15886/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16949/ : FAILURE

Compile error at [2021-12-01T08:59:33.718Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15059/ : FAILURE

Compile error at [2021-12-01T09:01:42.569Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/error_handler.cc:41:9:
error: no member named "logger" in namespace "cb"; did you mean "spdlog::logger"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15059/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16175/ : FAILURE

Compile error at [2021-12-01T09:00:20.203Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/error_handler.cc:41:13:
error: ?cb::logger? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16175/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13067/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
